--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postcss-color-transform",
+  "name": "postcss-color-transformer",
   "version": "1.0.0",
   "description": "Plugin PostCSS pour convertir entre différents formats de couleurs",
   "main": "dist/index.js",
@@ -33,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tuxado/postcss-color-transform.git"
+    "url": "git+https://github.com/tuxado/postcss-color-transformer.git"
   },
   "keywords": [
     "postcss",
@@ -52,9 +52,9 @@
   "author": "Votre Nom <votre-email@example.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tuxado/postcss-color-transform/issues"
+    "url": "https://github.com/tuxado/postcss-color-transformer/issues"
   },
-  "homepage": "https://github.com/tuxado/postcss-color-transform#readme",
+  "homepage": "https://github.com/tuxado/postcss-color-transformer#readme",
   "peerDependencies": {
     "postcss": "^8.0.0"
   },
